adds basic html and css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+
 /* Reset */
 html,
 body,
@@ -145,3 +147,11 @@ select {
 }
 
 /* End of reset */
+
+body {
+  background-color: #000;
+  color: #fff;
+  font-family: "Work Sans";
+  font-size: 16px;
+  line-height: 1.5;
+}
