--- a/style.css
+++ b/style.css
@@ -181,15 +181,18 @@ header nav a {
 }
 
 div.photo {
-  display: inline-block;
+  /* display: inline-block; */
   width: 300px;
   margin: 10px;
 }
 
 section.photos {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
   max-width: 1080px;
   margin: 0 auto;
+  justify-content: center;
 }
 
 div.large {
